# C-CPP-ITMO-skkv-course

./: C-CPP_exam_summary.md  README.md
itmo_c_eigenvalues-FedorrrS/: CMakeLists.txt  main.c
itmo_c_eigenvalues-FedorrrS/include/: algebra.h  householder.h  matrix.h  qr_algorithm.h
itmo_c_eigenvalues-FedorrrS/src/: algebra.c  householder.c  matrix.c  qr_algorithm.c
itmo_c_eigenvalues-FedorrrS/test_data/: out_ubuntu-22.04_1.txt
itmo_c_png-FedorrrS/: CMakeLists.txt  Makefile  main  main.c
itmo_c_png-FedorrrS/include/: lib_decider.h  png_utils.h  pnm_utils.h  structs.h
itmo_c_png-FedorrrS/src/: png_utils.c  pnm_utils.c
itmo_c_png-FedorrrS/test_data/: check-png.sh
itmo_cpp_ln-FedorrrS/: CMakeLists.txt  main.cpp
itmo_cpp_ln-FedorrrS/include/: CVector.h  Error_msg.h  LN.h  Operations.h
itmo_cpp_ln-FedorrrS/src/: LN.cpp
